# Multimodal_Agentic_RAG

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
chunking/: engine.py
core/: config.py  constants.py  logging.py
core/interfaces/: embedder.py
db/: schema.sql  session.py
db/migrations/: run.py
db/models/: __init__.py  asset.py  chunk.py  document.py  logs.py  relationship.py  section.py
db/repositories/: __init__.py  asset.py  chunk.py  document.py  logs.py  relationship.py  section.py
embeddings/: __init__.py  bge.py  cache.py  openai.py
ingestion/: parser.py  pipeline.py  tasks.py
notebooks/phase1_infrastructure/: 01_db_connection.ipynb  02_schema_setup.ipynb  03_config_validation.ipynb
notebooks/phase2_ingestion/: 01_document_parsing.ipynb  02_chunking.ipynb  03_embedding.ipynb  04_embedding_cache.ipynb  05_storage.ipynb  06_ingestion_e2e.ipynb
