[project]
name = "multimodal-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tabulate>=0.10.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
